fix: scale pet cards down on hover to accommodate shadow in overflown container

--- a/shelter/pages/main/styles/_our-friends.scss
+++ b/shelter/pages/main/styles/_our-friends.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    row-gap: 55px;
+    row-gap: 60px;
   }
 
   .title {
@@ -17,8 +17,7 @@
 
   .slider {
     &__slides {
-      max-width: 1000px;
-      padding: 5px;
+      max-width: 990px;
       
       &-wrapper {
         column-gap: 90px;
@@ -31,7 +30,7 @@
   #our-friends {
     .slider {
       &__slides {
-        max-width: 590px;
+        max-width: 580px;
 
         &-wrapper {
           column-gap: 40px;
@@ -44,19 +43,19 @@
 @media (max-width: 767px) {
   #our-friends {
     .content-wrapper {
-      row-gap: 37px;
+      row-gap: 42px;
     }
 
     .slider {
       flex-wrap: wrap;
       justify-content: center;
-      row-gap: 15px;
+      row-gap: 20x;
       column-gap: 80px;
       margin-bottom: 5px;
 
       &__slides {
         order: 1;
-        max-width: 280px;
+        max-width: 270px;
         justify-content: center;
 
         &-wrapper {
