--- a/shelter/pages/pets/styles/pets.css
+++ b/shelter/pages/pets/styles/pets.css
@@ -517,6 +517,7 @@ html {
 
 .section {
   width: 100%;
+  overflow: visible;
 }
 .section__content {
   margin: 0 auto;
@@ -537,6 +538,7 @@ html {
   padding-top: 80px;
   padding-bottom: 100px;
   margin: 0 auto;
+  overflow: visible;
 }
 
 .transparent {
@@ -796,8 +798,9 @@ html {
 .card--interactive:hover {
   background-color: #ffffff;
   filter: drop-shadow(0 0 3px #cdcdcd);
+  transform: scale(0.98);
   transition: all 0.2s ease;
-  transition-property: background-color, filter;
+  transition-property: background-color, filter, scale;
 }
 .card--interactive:hover .button:not(:disabled):not(.slider__pagination) {
   background-color: #fddcc4;
