--- a/shelter/shared/styles/_shared.scss
+++ b/shelter/shared/styles/_shared.scss
@@ -12,6 +12,7 @@ html {
 
 .section {
   width: 100%;
+  overflow: visible;
 
   &__content {
     margin: 0 auto;
@@ -39,6 +40,7 @@ html {
   padding-top: 80px;
   padding-bottom: 100px;
   margin: 0 auto;
+  overflow: visible;
 }
 
 .transparent {
